[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 517.0
margin_bottom = 613.0
color = Color( 0.403922, 0.156863, 0.156863, 1 )

[node name="Button" type="Button" parent="."]
margin_left = 59.0
margin_top = 458.0
margin_right = 150.0
margin_bottom = 482.0
text = "Armazena"

[node name="Button2" type="Button" parent="."]
margin_left = 200.0
margin_top = 461.0
margin_right = 317.0
margin_bottom = 481.0
text = "Processa"

[node name="Button3" type="Button" parent="."]
margin_left = 366.0
margin_top = 457.0
margin_right = 445.0
margin_bottom = 477.0
text = "Resultado"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 69.0
margin_top = 374.0
margin_right = 195.0
margin_bottom = 429.0

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 307.0
margin_top = 379.0
margin_right = 433.0
margin_bottom = 434.0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 317.0
margin_top = 288.0
margin_right = 453.0
margin_bottom = 328.0

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 74.0
margin_top = 285.0
margin_right = 206.0
margin_bottom = 318.0

[node name="Label" type="Label" parent="."]
margin_left = 111.0
margin_top = 351.0
margin_right = 151.0
margin_bottom = 365.0
text = "NÃºmero"

[node name="Label2" type="Label" parent="."]
margin_left = 351.0
margin_top = 353.0
margin_right = 403.0
margin_bottom = 367.0
text = "Nome"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
